ops/k8s/api-only-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: p8
  name: percolate-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "percolate-api"
  template:
    metadata:
      labels:
        app: percolate-api
    spec:
      containers:
        - name: percolate-api
          image: percolationlabs/percolate-api
          imagePullPolicy: Always
          ports:
            - containerPort: 5008
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
