ops/k8s/percolate-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: percolate-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "percolate-scheduler"
  template:
    metadata:
      labels:
        app: percolate-scheduler
    spec:
      containers:
        - name: percolate-scheduler
          image: percolationlabs/percolate-api:latest
          imagePullPolicy: Always
          command: ["python", "-m", "percolate.cli", "scheduler"]
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
