ops/k8s/manifest.yaml
#by default this will but everything in the p8 namespace and create that namespace
#if not put here, then we need to configure P8_PG_HOST for the app
#in reality we should create the namespace first and add the scripts gen_sql_install_configmap and then apply the cluster manifest
apiVersion: v1
kind: Namespace
metadata:
  name: p8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: p8
  name: percolate-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "percolate-api"
  template:
    metadata:
      labels:
        app: percolate-api
    spec:
      containers:
        - name: percolate-api
          image: percolationlabs/percolate-api
          imagePullPolicy: Always
          ports:
            - containerPort: 5008
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: percolate-api
  namespace: p8
spec:
  selector:
    app: percolate-api
  ports:
    - protocol: TCP
      port: 5008
      targetPort: 5008
  type: ClusterIP
