ops/k8s/percolate-media-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: percolate-media-api
  namespace: eepis
spec:
  selector:
    app: percolate-media-api
  ports:
  - port: 5008
    targetPort: 5008
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: percolate-media-api
  namespace: eepis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: percolate-media-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: percolate-media-api
    spec:
      containers:
      - name: percolate-media-api
        image: percolationlabs/percolate-api:media
        imagePullPolicy: Always
        ports:
        - containerPort: 5008
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 5Gi
          requests:
            cpu: 1000m
            memory: 4Gi
