ops/k8s/percolate-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    load-balancer.hetzner.cloud/location: hel1
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "off"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "off"
  name: percolate-api-ingress
  namespace: eepis
spec:
  ingressClassName: nginx
  rules:
  - host: eepis.percolationlabs.ai
    http:
      paths:
      - backend:
          service:
            name: percolate-api
            port:
              number: 5008
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - eepis.percolationlabs.ai
    secretName: percolationlabs-tls
